# WordChecker-wxWidgets

./: CMakeLists.txt  README.txt  WordCheckerConfig.h.in  main.cpp  main_original.cpp
MathFunctions/: CMakeLists.txt  MathFunctions.cpp  MathFunctions.h  mysqrt.cpp  mysqrt.h
